@startuml

title __CONTROLLER's Class Diagram__\n

  namespace  {
    namespace om.example.piper.piperchat {
      namespace controller {
        class com.example.piper.piperchat.controller.AuthenticationController {
            + register()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.piper.piperchat {
      namespace controller {
        class com.example.piper.piperchat.controller.MessagingController {
            - simpMessagingTemplate : SimpMessagingTemplate
            + call()
            + handleNotifications()
            + sendMessage()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.piper.piperchat {
      namespace controller {
        class com.example.piper.piperchat.controller.RoomController {
            - simpMessagingTemplate : SimpMessagingTemplate
            + createAGroup()
            + createARoom()
            + getRoomMessages()
            + sendNotificationToOtherUser()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.piper.piperchat {
      namespace controller {
        class com.example.piper.piperchat.controller.UserController {
            + getUser()
            + updateUserDisplayImage()
        }
      }
    }
  }
  

  com.example.piper.piperchat.controller.AuthenticationController o-- com.example.piper.piperchat.service.UserService : userService
  com.example.piper.piperchat.controller.AuthenticationController o-- com.example.piper.piperchat.service.UserValidator : userValidator
  com.example.piper.piperchat.controller.MessagingController o-- com.example.piper.piperchat.service.RoomService : roomService
  com.example.piper.piperchat.controller.RoomController o-- com.example.piper.piperchat.service.RoomService : roomService
  com.example.piper.piperchat.controller.RoomController o-- com.example.piper.piperchat.service.UserService : userService
  com.example.piper.piperchat.controller.UserController o-- com.example.piper.piperchat.service.AmazonS3Service : amazonS3Service
  com.example.piper.piperchat.controller.UserController o-- com.example.piper.piperchat.service.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
